* Add exec target to each component.   * Miscellaneous tweaks to build system.

--- a/build.properties
+++ b/build.properties
@@ -13,5 +13,5 @@ component.java-version   = 1.4
 component.resources-bin  = (none)
 component.resources-text = (none)
 
-component.manifest-main  = loci.apps.MultiLUT
-component.manifest-cp    = visad-lite.jar
+component.main-class     = loci.apps.MultiLUT
+component.runtime-cp     = ${component.classpath}
