--- a/build.properties
+++ b/build.properties
@@ -9,6 +9,7 @@
 component.jar            = MultiLUT.jar
 component.classpath      = ${lib.dir}/visad-lite.jar
 component.java-version   = 1.4
+component.deprecation    = true
 
 component.resources-bin  = (none)
 component.resources-text = (none)
