Fix toplevel Findbugs target.

--- a/build.properties
+++ b/build.properties
@@ -11,8 +11,8 @@ component.classpath      = ${lib.dir}/visad-lite.jar
 component.java-version   = 1.4
 component.deprecation    = true
 
-component.resources-bin  = (none)
-component.resources-text = (none)
+component.resources-bin  =
+component.resources-text =
 
 component.main-class     = loci.apps.MultiLUT
 component.runtime-cp     = ${component.classpath}
