Fix up Ant build system; add OSGi bundle export to JAR production.

--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,9 @@
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
+component.name           = MultiLUT
 component.jar            = MultiLUT.jar
+component.version        = 1.0.0
 component.classpath      = ${lib.dir}/visad-lite.jar
 component.java-version   = 1.4
 component.deprecation    = true
