--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,6 @@ Type "ant -p" for a list of targets.
     Build file for Multi LUT app project
   </description>
   <property name="root.dir" location="../../.."/>
-  <import file="${root.dir}/components/java.xml"/>
+  <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
 </project>
