--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <licenses>
     <license>
-      <name>BSD</name>
+      <name>Public domain</name>
       <distribution>repo</distribution>
     </license>
   </licenses>
