--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
 
   <licenses>
     <license>
-      <name>Public domain</name>
+      <name>BSD</name>
+      <url>http://dev.loci.wisc.edu/svn/java/trunk/legacy/multi-lut/LICENSE.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
