--- a/pom.xml
+++ b/pom.xml
@@ -2,22 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-    http://maven.apache.org/maven-v4_0_0.xsd">
+    http://maven.apache.org/xsd/maven-v4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>loci</groupId>
-    <artifactId>loci-base-pom</artifactId>
-    <version>1.06</version>
+    <artifactId>loci-base</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>loci</groupId>
   <artifactId>MultiLUT</artifactId>
-  <version>1.0-SNAPSHOT</version>
 
   <name>Multi-LUT</name>
   <description>A demo application for visually exploring multi-spectral image data.</description>
-  <url>http://loci.wisc.edu/software</url>
   <inceptionYear>2001</inceptionYear>
 
   <licenses>
@@ -69,11 +66,15 @@
     </developer>
   </developers>
 
+  <!-- NB: for loci-base, in case of partial checkout -->
   <repositories>
-    <!-- NB: for loci-base-pom -->
     <repository>
       <id>loci.releases</id>
       <url>http://dev.loci.wisc.edu:8081/content/repositories/releases</url>
+    </repository>
+    <repository>
+      <id>loci.snapshots</id>
+      <url>http://dev.loci.wisc.edu:8081/content/repositories/snapshots</url>
     </repository>
   </repositories>
 
