--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,11 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-loci</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <artifactId>MultiLUT</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
   <name>Multi-LUT</name>
   <description>A demo application for visually exploring multi-spectral image data.</description>
