POM: add SCM section

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 		</developer>
 	</developers>
 
+	<scm>
+		<connection>scm:git:git://github.com/uw-loci/multi-lut</connection>
+		<developerConnection>scm:git:git@github.com:uw-loci/multi-lut</developerConnection>
+		<tag>HEAD</tag>
+		<url>https://github.com/uw-loci/multi-lut</url>
+	</scm>
+
 	<repositories>
 		<!-- NB: for project parent -->
 		<repository>
