--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,7 @@
 
 	<licenses>
 		<license>
-			<name>BSD</name>
-			<url>http://dev.loci.wisc.edu/svn/java/trunk/legacy/multi-lut/LICENSE.txt</url>
+			<name>Simplified BSD License</name>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
@@ -45,6 +44,14 @@
 							<mainClass>loci.apps.MultiLUT</mainClass>
 						</manifest>
 					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<configuration>
+					<licenseName>bsd_2</licenseName>
+					<projectName>MultiLUT demo application for visually exploring multi-spectral image data.</projectName>
 				</configuration>
 			</plugin>
 		</plugins>
