POM: deploy releases to the ImageJ repository

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,9 @@
 		<license.copyrightOwners>Board of Regents of the University of
 Wisconsin-Madison.</license.copyrightOwners>
 		<license.projectName>MultiLUT demo application for visually exploring multi-spectral image data.</license.projectName>
+
+		<!-- NB: Deploy releases to the ImageJ Maven repository. -->
+		<releaseProfiles>deploy-to-imagej</releaseProfiles>
 	</properties>
 
 	<repositories>
